feat: get api endpoint impltmented
